src/main/java/com/example/books/error/NotFoundException.java
package com.example.books.error;

import jakarta.persistence.EntityNotFoundException;

public class NotFoundException extends EntityNotFoundException {
    public NotFoundException(String message) {
        super(message);
    }
}
